examples/c/error-codes/violates-constraint/nonfatal/CV-TEG1-bad-static.output
CV-TEG1-bad-static.c:2:14: error: Generic selection with a controlling expression compatible with multiple types in the association list.

    Constraint violation (CV-TEG1):
        see C11 section 6.5.1.1:2 http://rvdoc.org/C11/6.5.1.1
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

