examples/c/error-codes/violates-constraint/nonfatal/CV-TEG1-bad-static.c
int main() {
      return _Generic( 'a', char: 1, int: 2, long: 3, default: 0, signed int: 4) != 2;
}
